tests/pact/bad/bad-repl-native.repl
(begin-tx)
(module bad-repl-native G
  (defcap G () true)
  (defun f () (env-sigs [{"bob",[]}])))
(commit-tx)
(bad-repl-native.f)
